--- a/bread/toc.yml
+++ b/bread/toc.yml
@@ -6,10 +6,10 @@
     tocHref: /azure/active-directory/
     topicHref: /azure/active-directory/active-directory-whatis
     items:
-      - name: "Connect"
+      - name: "Anslut"
         tocHref: /azure/active-directory/connect/
         topicHref: /azure/active-directory/connect/
-      - name: "Develop"
+      - name: "Utveckla"
         tocHref: /azure/active-directory/develop/
         topicHref: azure/active-directory/develop/
       - name: "Privileged Identity Management"
@@ -51,13 +51,16 @@
   - name: "Automation"
     tocHref: /azure/automation/
     topicHref: /azure/automation/automation-intro
-  - name: "Functions"
+  - name: "Container Registry"
+    tocHref: /azure/container-registry/
+    topicHref: /azure/container-registry/container-registry-info
+  - name: "Funktioner"
     tocHref: /azure/azure-functions/
     topicHref: /azure/azure-functions/functions-overview
   - name: "Government"
     tocHref: /azure/azure-government/
     topicHref: /azure/azure-government/documentation-government-overview
-  - name: "Portal"
+  - name: "Portalen"
     tocHref: /azure/azure-portal/
     topicHref: /azure/azure-portal/azure-portal-overview
   - name: "Resource Manager"
@@ -66,7 +69,7 @@
   - name: "Azure Stack"
     tocHref: /azure/azure-stack/
     topicHref: /azure/azure-stack/azure-stack-poc
-  - name: "Supportability"
+  - name: "Support"
     tocHref: /azure/azure-supportability/
     topicHref: /azure/azure-supportability/
   - name: "Backup"
@@ -75,7 +78,7 @@
   - name: "Batch"
     tocHref: /azure/batch/
     topicHref: /azure/batch/batch-technical-overview
-  - name: "Billing"
+  - name: "Fakturering"
     tocHref: /azure/billing/
     topicHref: /azure/billing/../billing-use-existing-office-365-account-azure-subscription
   - name: "Biztalk Services"
@@ -87,13 +90,13 @@
   - name: "CDN"
     tocHref: /azure/cdn/
     topicHref: /azure/cdn/cdn-overview
-  - name: "Cloud Services"
+  - name: "Molntjänster"
     tocHref: /azure/cloud-services/
     topicHref: /azure/cloud-services/cloud-services-choose-me
   - name: "Cognitive Services"
     tocHref: /azure/cognitive-services/
     topicHref: /azure/cognitive-services/cognitive-services-text-analytics-quick-start
-  - name: "Connectors"
+  - name: "Anslutningar"
     tocHref: /azure/connectors/
     topicHref: /azure/connectors/
   - name: "Container Service"
@@ -120,13 +123,13 @@
   - name: "DocumentDB"
     tocHref: /azure/documentdb/
     topicHref: /azure/documentdb/documentdb-introduction
-  - name: "Event Hubs"
+  - name: "Händelsehubbar"
     tocHref: /azure/event-hubs/
     topicHref: /azure/event-hubs/event-hubs-what-is-event-hubs
-  - name: "Expressroute"
+  - name: "ExpressRoute"
     tocHref: /azure/expressroute/
     topicHref: /azure/expressroute/expressroute-introduction
-  - name: "Guidance"
+  - name: "Riktlinjer"
     tocHref: /azure/guidance/
     topicHref: /azure/guidance/guidance-resiliency-overview
   - name: "HDInsight"
@@ -141,7 +144,7 @@
   - name: "Key Vault"
     tocHref: /azure/key-vault/
     topicHref: /azure/key-vault/key-vault-whatis
-  - name: "Load Balancer"
+  - name: "Belastningsutjämnare"
     tocHref: /azure/load-balancer/
     topicHref: /azure/load-balancer/load-balancer-overview
   - name: "Log Analytics"
@@ -150,10 +153,10 @@
   - name: "Machine Learning"
     tocHref: /azure/machine-learning/
     topicHref: /azure/machine-learning/machine-learning-faq
-  - name: "Marketplace Consumer"
+  - name: "Marketplace-konsument"
     tocHref: /azure/marketplace-consumer/
     topicHref: /azure/marketplace-consumer/
-  - name: "Marketplace Publishing"
+  - name: "Marketplace-publicering"
     tocHref: /azure/marketplace-publishing/
     topicHref: /azure/marketplace-publishing/
   - name: "Media Services"
@@ -165,14 +168,14 @@
   - name: "Mobile Services"
     tocHref: /azure/mobile-services/
     topicHref: /azure/mobile-services/
-  - name: "Monitoring And Diagnostics"
+  - name: "Övervakning och diagnostik"
     tocHref: /azure/monitoring-and-diagnostics/
     topicHref: /azure/monitoring-and-diagnostics/../azure-portal/monitoring-get-started
   - name: "Multi-Factor Authentication"
     tocHref: /azure/multi-factor-authentication/
     topicHref: /azure/multi-factor-authentication/multi-factor-authentication
     items:
-      - name: "User Guide"
+      - name: "Användarhandbok"
         tocHref: /azure/multi-factor-authentication/end-user/
         topicHref: /azure/multi-factor-authentication/end-user/
   - name: "Notification Hubs"
@@ -187,10 +190,10 @@
   - name: "Redis Cache"
     tocHref: /azure/redis-cache/
     topicHref: /azure/redis-cache/cache-faq
-  - name: "Remoteapp"
+  - name: "RemoteApp"
     tocHref: /azure/remoteapp/
     topicHref: /azure/remoteapp/remoteapp-whatis
-  - name: "Resiliency"
+  - name: "Återhämtning"
     tocHref: /azure/resiliency/
     topicHref: /azure/resiliency/
   - name: "Resource Health"
@@ -202,7 +205,7 @@
   - name: "Search"
     tocHref: /azure/search/
     topicHref: /azure/search/search-what-is-azure-search
-  - name: "Security"
+  - name: "Säkerhet"
     tocHref: /azure/security/
     topicHref: /azure/security/azure-security-getting-started
   - name: "Security Center"
@@ -211,7 +214,7 @@
   - name: "Service Bus"
     tocHref: /azure/service-bus/
     topicHref: /azure/service-bus/../service-bus-messaging/service-bus-queues-topics-subscriptions
-  - name: "Service Bus Messaging"
+  - name: "Service Bus-meddelanden"
     tocHref: /azure/service-bus-messaging/
     topicHref: /azure/service-bus-messaging/service-bus-queues-topics-subscriptions
   - name: "Service Bus Relay"
@@ -220,7 +223,7 @@
   - name: "Service Fabric"
     tocHref: /azure/service-fabric/
     topicHref: /azure/service-fabric/service-fabric-overview
-  - name: "Site Recovery"
+  - name: "Webbplatsåterställning"
     tocHref: /azure/site-recovery/
     topicHref: /azure/site-recovery/site-recovery-overview
   - name: "SQL Data Warehouse"
@@ -232,7 +235,7 @@
   - name: "SQL Server Stretch Database"
     tocHref: /azure/sql-server-stretch-database/
     topicHref: /azure/sql-server-stretch-database/sql-server-stretch-database-overview
-  - name: "Storage"
+  - name: "Lagring"
     tocHref: /azure/storage/
     topicHref: /azure/storage/storage-introduction
   - name: "StorSimple"
@@ -244,10 +247,10 @@
   - name: "Traffic Manager"
     tocHref: /azure/traffic-manager/
     topicHref: /azure/traffic-manager/traffic-manager-overview
-  - name: "Virtual Machine Scale Sets"
+  - name: "Skalningsuppsättningar för Virtual Machines"
     tocHref: /azure/virtual-machine-scale-sets/
     topicHref: /azure/virtual-machine-scale-sets/virtual-machine-scale-sets-overview
-  - name: "Virtual Machines"
+  - name: "Virtuella datorer"
     tocHref: /azure/virtual-machines/
     topicHref: /azure/virtual-machines/
     items:
@@ -255,19 +258,19 @@
         tocHref: /azure/virtual-machines/linux/
         topicHref: /azure/virtual-machines/linux/virtual-machines-linux-azure-overview
         items:
-          - name: "Classic Deployment"
+          - name: "Klassisk distribution"
             tocHref: /azure/virtual-machines/linux/classic/
             topicHref: /azure/virtual-machines/linux/classic/
       - name: "Windows"
         tocHref: /azure/virtual-machines/windows/
         topicHref: /azure/virtual-machines/windows/virtual-machines-windows-about
         items:
-          - name: "Classic Deployment"
+          - name: "Klassisk distribution"
             tocHref: /azure/virtual-machines/windows/classic/
             topicHref: /azure/virtual-machines/windows/classic/
   - name: "Virtual Network"
     tocHref: /azure/virtual-network/
     topicHref: /azure/virtual-network/virtual-networks-overview
-  - name: "VPN Gateway"
+  - name: "VPN-gateway"
     tocHref: /azure/vpn-gateway/
     topicHref: /azure/vpn-gateway/vpn-gateway-about-vpn-devices
