--- a/bread/toc.yml
+++ b/bread/toc.yml
@@ -9,6 +9,9 @@
       - name: "Anslut"
         tocHref: /azure/active-directory/connect/
         topicHref: /azure/active-directory/connect/
+      - name: "Connect Health"
+        tocHref: /azure/active-directory/connect-health/
+        topicHref: /azure/active-directory/connect-health/
       - name: "Utveckla"
         tocHref: /azure/active-directory/develop/
         topicHref: azure/active-directory/develop/
