--- a/articles/sql-database/toc.yml
+++ b/articles/sql-database/toc.yml
@@ -185,6 +185,8 @@
     items:
     - name: "Kopiera en databas"
       href: sql-database-copy.md
+    - name: "Importera en databas"
+      href: sql-database-import.md
     - name: "Exportera en databas"
       href: sql-database-export.md
   - name: "Övervaka och finjustera"
@@ -209,16 +211,6 @@
       href: sql-database-compatibility-level-query-performance-130.md
 - name: "Instruktionsguider"
   items:
-  - name: "Hantera brandväggen"
-    items:
-    - name: "Portalen"
-      href: sql-database-configure-firewall-settings.md
-    - name: "PowerShell"
-      href: sql-database-configure-firewall-settings-powershell.md
-    - name: "REST API"
-      href: sql-database-configure-firewall-settings-rest.md
-    - name: "Transact-SQL"
-      href: sql-database-configure-firewall-settings-tsql.md
   - name: "Hantera elastiska pooler"
     items:
     - name: "Portalen"
@@ -249,20 +241,10 @@
       href: sql-database-always-encrypted-azure-key-vault.md
     - name: "Konfigurera maskning"
       href: sql-database-dynamic-data-masking-get-started-portal.md
-  - name: "Återställning"
-    items:
-    - name: "Portalen"
-      href: sql-database-get-started-backup-recovery-portal.md
-    - name: "PowerShell"
-      href: sql-database-get-started-backup-recovery-powershell.md
-    - name: "Enkel tabell"
-      href: sql-database-cloud-migrate-restore-single-table-azure-backup.md
-  - name: "Kvarhållning"
-    items:
-    - name: "Kvarhållning – Portal"
-      href: sql-database-manage-long-term-backup-retention-portal.md
-    - name: "Kvarhållning – PowerShell"
-      href: sql-database-manage-long-term-backup-retention-powershell.md
+  - name: "Återställ enskild tabell"
+    href: sql-database-cloud-migrate-restore-single-table-azure-backup.md
+  - name: "Konfigurera valv för säkerhetskopior"
+    href: sql-database-long-term-backup-retention-configure.md
   - name: "Geo-replikera data"
     items:
     - name: "Portalen"
@@ -277,10 +259,6 @@
       href: sql-database-disaster-recovery-drills.md
   - name: "Flytta data"
     items:
-    - name: "Importera – Portal"
-      href: sql-database-import-portal.md
-    - name: "Importera – SQLPackage"
-      href: sql-database-import-sqlpackage.md
     - name: "Läs in data med BCP"
       href: sql-database-load-from-csv-with-bcp.md
     - name: "Läs in data med ADF"
