--- a/articles/virtual-machines/windows/toc.yml
+++ b/articles/virtual-machines/windows/toc.yml
@@ -31,10 +31,12 @@
     href: regions-and-availability.md
   - name: "Lagring"
     href: ../../storage/storage-about-disks-and-vhds-windows.md?toc=%2fazure%2fvirtual-machines%2fwindows%2ftoc.json
-  - name: "Setworking"
+  - name: "Nätverk"
     href: network-overview.md
   - name: "Skalningsuppsättning för virtuella datorer"
     href: ../../virtual-machine-scale-sets/virtual-machine-scale-sets-overview.md?toc=%2fazure%2fvirtual-machines%2fwindows%2ftoc.json
+  - name: "Instans av metadatatjänst" 
+    href: ../virtual-machines-instancemetadataservice-overview.md
   - name: "Behållare"
     href: containers.md
   - name: "Resource Manager"
