--- a/articles/sql-database/toc.yml
+++ b/articles/sql-database/toc.yml
@@ -4,8 +4,6 @@
   items:
   - name: "Om SQL DB"
     href: sql-database-technical-overview.md
-  - name: "Jämför SQL DB"
-    href: sql-database-features.md
 - name: "Snabbstart"
   expanded: true
   items:
@@ -69,8 +67,12 @@
       href: sql-database-benchmark-overview.md
     - name: "Begränsningar"
       href: sql-database-resource-limits.md
-  - name: "Verktyg"
-    href: sql-database-manage-overview.md
+    - name: "PaaS eller IaaS"
+      href: sql-database-paas-vs-sql-server-iaas.md  
+    - name: "Funktioner"
+      href: sql-database-features.md
+    - name: "Verktyg"
+      href: sql-database-manage-overview.md
   - name: "Partitionera data"
     items:
     - name: "Shardade databaser"
@@ -231,10 +233,6 @@
     items:
     - name: "Azure AD-autentisering"
       href: sql-database-aad-authentication-configure.md
-    - name: "Granskning"
-      href: sql-database-auditing-portal.md
-    - name: "Hotidentifiering"
-      href: sql-database-threat-detection-portal.md
     - name: "Kryptera – certifikatarkiv"
       href: sql-database-always-encrypted.md
     - name: "Kryptera – nyckelvalv"
@@ -388,6 +386,8 @@
   items:
   - name: "VANLIGA FRÅGOR OCH SVAR"
     href: sql-database-faq.md
+  - name: "Offentliga datauppsättningar"
+    href: sql-database-public-data-sets.md  
   - name: "Felsökning av anslutningar"
     href: https://support.microsoft.com/help/10085/troubleshooting-connectivity-issues-with-microsoft-azure-sql-database
   - name: "Prissättning"
@@ -414,3 +414,5 @@
       href: https://github.com/Microsoft/sql-server-samples/tree/master/samples/manage/azure-sql-db-elastic-pools
     - name: "Anpassad instrumentpanel för elastisk pool"
       href: https://github.com/Microsoft/sql-server-samples/tree/master/samples/manage/azure-sql-db-elastic-pools-custom-dashboard
+
+
