--- a/bread/toc.yml
+++ b/bread/toc.yml
@@ -67,6 +67,9 @@
   - name: "Government"
     tocHref: /azure/azure-government/
     topicHref: /azure/azure-government/
+  - name: "Tyskland"
+    tocHref: /azure/germany/
+    topicHref: /azure/germany/
   - name: "Portalen"
     tocHref: /azure/azure-portal/
     topicHref: /azure/azure-portal/
