--- a/articles/virtual-machines/linux/toc.yml
+++ b/articles/virtual-machines/linux/toc.yml
@@ -13,20 +13,30 @@
     href: quick-create-portal.md
   - name: "Skapa VM – PowerShell"
     href: quick-create-powershell.md
+- name: "Självstudier"
+  items:
+  - name: "1 – Skapa/hantera virtuella datorer"
+    href: tutorial-manage-vm.md
+  - name: "2 – Skapa/hantera diskar"
+    href: tutorial-manage-disks.md
+  - name: "3 – Automatisera konfiguration"
+    href: tutorial-automate-vm-deployment.md
+  - name: "4 – Skapa avbildningar av virtuella datorer"
+    href: tutorial-custom-images.md
+  - name: "5 – Virtuella datorer med hög tillgänglighet"
+    href: tutorial-availability-sets.md
+  - name: "6 – Skapa en VM-skalningsuppsättning"
+    href: tutorial-create-vmss.md
+  - name: "7 – Belastningsutjämna virtuella datorer"
+    href: tutorial-load-balancer.md
+  - name: "8 – Hantera nätverk"
+    href: tutorial-virtual-network.md
 - name: "Exempel"
   items:
   - name: "Azure CLI"
     href: cli-samples.md
   - name: "PowerShell"
     href: powershell-samples.md
-- name: "Självstudier"
-  items:
-  - name: "Skapa och hantera en virtuell dator"
-    href: tutorial-manage-vm.md
-  - name: "Belastningsutjämna virtuella datorer med hög tillgänglighet"
-    href: tutorial-load-balance-nodejs.md
-  - name: "Skapa en VM-skalningsuppsättning"
-    href: tutorial-create-vmss.md
 - name: "Koncept"
   items:
   - name: "Azure-godkända distributioner"
