--- a/articles/virtual-machines/windows/toc.yml
+++ b/articles/virtual-machines/windows/toc.yml
@@ -13,18 +13,24 @@
     href: quick-create-powershell.md
   - name: "Skapa VM – Azure CLI"
     href: quick-create-cli.md
+- name: "Självstudier"
+  items:
+  - name: "1 – Skapa/hantera en virtuell dator"
+    href: tutorial-manage-vm.md
+  - name: "2 – Skapa/hantera diskar"
+    href: tutorial-manage-data-disk.md
+  - name: "3 – Automatisera konfiguration"
+    href: tutorial-automate-vm-deployment.md
+  - name: "4 – Belastningsutjämna virtuella datorer"
+    href: tutorial-load-balancer.md
+  - name: "5 – Hantera nätverk"
+    href: tutorial-virtual-network.md
 - name: "Exempel"
   items:
   - name: "PowerShell"
     href: powershell-samples.md
   - name: "Azure CLI"
     href: cli-samples.md
-- name: "Självstudier"
-  items:
-  - name: "Skapa och hantera en virtuell dator"
-    href: ../virtual-machines-windows-tutorial-manage-vm.md?toc=%2fazure%2fvirtual-machines%2fwindows%2ftoc.json
-  - name: "Belastningsutjämna virtuella datorer med hög tillgänglighet"
-    href: load-balanced-iis-tutorial.md
 - name: "Koncept"
   items:
   - name: "Regioner och tillgänglighet"
@@ -261,7 +267,7 @@
     - name: "Hantera åtkomst"
       href: ../../active-directory/active-directory-accessmanagement-groups-with-advanced-rules.md?toc=%2fazure%2fvirtual-machines%2fwindows%2ftoc.json
     - name: "Kryptera en disk"
-      href: ../../security/azure-security-disk-encryption.md?toc=%2fazure%2fvirtual-machines%2fwindows%2ftoc.json
+      href: encrypt-disks.md
     - name: "Tillämpa principer för virtuella datorer"
       href: policy.md
     - name: "Konfigurera Key Vault"
