--- a/articles/cognitive-services/LUIS/toc.yml
+++ b/articles/cognitive-services/LUIS/toc.yml
@@ -21,6 +21,8 @@
     href: luis-concept-entity-types.md
   - name: Yttranden
     href: luis-concept-utterance.md
+  - name: Funktioner
+    href: luis-concept-feature.md
   - name: Stöd för flera språk
     href: luis-concept-language-support.md
 - name: Instruktionsguider
